--- a/example.bib
+++ b/example.bib
@@ -18,7 +18,8 @@
 	Publisher = {IBM},
 	Title = {Query-by-example: A data base language},
 	Volume = {16},
-	Year = {1977}}
+	Year = {1977}
+}
 
 @book{davidson1996c,
 	Author = {Davidson, Kenneth R},
@@ -27,7 +28,8 @@
 	Publisher = {American Mathematical Soc.},
 	Title = {C*-algebras by example},
 	Volume = {6},
-	Year = {1996}}
+	Year = {1996}
+}
 
 @article{freeman2002example,
 	Author = {Freeman, William T and Jones, Thouis R and Pasztor, Egon C},
@@ -38,7 +40,8 @@
 	Pages = {56--65},
 	Publisher = {IEEE},
 	Title = {Example-based super-resolution},
-	Year = {2002}}
+	Year = {2002}
+}
 
 @book{beck2003test,
 	Author = {Beck, Kent},
@@ -46,4 +49,5 @@
 	Date-Modified = {2019-04-05 09:13:37 +0200},
 	Publisher = {Addison-Wesley Professional},
 	Title = {Test-driven development: by example},
-	Year = {2003}}
+	Year = {2003}
+}
